Adjust retry button visibility and reset behavior

--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
         <div id="ui">
             <div id="score">Score: 0</div>
         </div>
+        <!-- ゲームオーバー時だけ表示するパネル -->
         <div id="gameOver" class="hidden">
             <p>Game Over</p>
+            <!-- リトライ操作用のボタン -->
             <button id="retryButton">Retry</button>
         </div>
     </div>
