Add hazards, version display, and retry visibility fixes

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <div id="ui">
             <div id="score">Score: 0</div>
         </div>
+        <!-- バージョン表示用のテキスト -->
+        <div id="versionLabel"></div>
         <!-- ゲームオーバー時だけ表示するパネル -->
         <div id="gameOver" class="hidden">
             <p>Game Over</p>
